--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,8 +44,12 @@ jobs:
           name: playwright-report
           path: playwright-report
 
+      - name: Check report folder
+        run: ls -R playwright-report
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: playwright-report
+          publish_branch: gh-pages
