--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: playwright-report
-          publish_branch: gh-pages
+          publish_branch: main
           user_name: github-actions
           user_email: github-actions@github.com
           force_orphan: true
