--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,59 +8,30 @@ on:
 
 jobs:
   test:
+    name: Run Playwright Tests
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright tests
-        run: npx playwright test --reporter=html --output=playwright-report
+      - name: Run tests
+        run: npx playwright test --reporter=line
 
-      - name: Upload Playwright HTML report
+      - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report
-
-  publish-report:
-    needs: test
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Download report artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report
-
-      - name: Verify report exists
-        run: |
-          if [ ! -d "playwright-report" ] || [ -z "$(ls -A playwright-report)" ]; then
-            echo "Error: report folder is empty!"
-            exit 1
-          fi
-
-      - name: List report files
-        run: ls -R playwright-report
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: playwright-report
-          publish_branch: gh-pages
-          user_name: github-actions
-          user_email: github-actions@github.com
-          force_orphan: true
+          path: playwright-report/
