--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,9 +29,11 @@ jobs:
       - name: Run tests
         run: npx playwright test --reporter=html
 
-      - name: Upload Playwright report
+      - name: Deploy Playwright report to GitHub Pages
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          name: playwright-report
-          path: playwright-report/
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: playwright-report
+          keep_files: false
+          allow_empty_commit: true
