--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,11 @@ jobs:
     name: Run Playwright Tests
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      packages: write
+      pages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
